--- a/sample/src/index.html
+++ b/sample/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <meta charset="utf-8">
   <title>Sample</title>
   <base href="/">
